--- a/all/views/partials/footer.ejs
+++ b/all/views/partials/footer.ejs
@@ -24,14 +24,14 @@
       </nav>
       <hr class="style-one">
     </div>
-<div class="down"> 
-<div style="width:300px; margin:auto; margin-top:30px;padding-top:30px">
-    <img class="button" src="/assets/fb.png" style="height: 40px; width:40px">
-  <img class="button" src="/assets/insta.png" style="height: 40px; width:40px">
-  <img class="button" src="/assets/twi.png" style="height: 40px; width:40px">
-</div>
-  
-</div>
+    <div class="down"> 
+      <div style="width:300px; margin:auto; margin-top:30px;margin-left: 570px;padding-top:30px">
+          <img class="button" src="/assets/fb.png" style="height: 40px; width:40px">
+        <img class="button" src="/assets/insta.png" style="height: 40px; width:40px">
+        <img class="button" src="/assets/twi.png" style="height: 40px; width:40px">
+      </div>
+        
+      </div>
 
 <!-- ovi class end -->
 
@@ -1743,6 +1743,10 @@ particlesJS('particles-js',
     right:0;
     z-index: 100;
    
+}
+.pagination
+{
+   margin-left: 60px;
 }
 </style>
  
