--- a/all/views/partials/footer1.ejs
+++ b/all/views/partials/footer1.ejs
@@ -2,13 +2,13 @@
 </div>
 <hr class="style-one">
 <div class="down"> 
-        <div style="width:300px; margin:auto; margin-top:30px;padding-top:30px">
-            <img class="button" src="/assets/fb.png" style="height: 40px; width:40px">
-          <img class="button" src="/assets/insta.png" style="height: 40px; width:40px">
-          <img class="button" src="/assets/twi.png" style="height: 40px; width:40px">
-        </div>
-          
-        </div>
+  <div style="width:300px; margin:auto; margin-top:30px;margin-left: 570px;padding-top:30px">
+      <img class="button" src="/assets/fb.png" style="height: 40px; width:40px">
+    <img class="button" src="/assets/insta.png" style="height: 40px; width:40px">
+    <img class="button" src="/assets/twi.png" style="height: 40px; width:40px">
+  </div>
+    
+  </div>
     
         <!-- ovi class end -->
 </div>
@@ -1720,6 +1720,10 @@ particlesJS('particles-js',
     right: 0;
     z-index: 100;
   
+}
+.pagination
+{
+   margin-left: 60px;
 }
 </style>
    
