--- a/all/views/partials/header1.ejs
+++ b/all/views/partials/header1.ejs
@@ -38,7 +38,7 @@
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav">
 
-          <li><a href="/movies/popular/1">Home<span class="sr-only">(current)</span></a></li>
+          <li><a href="/trending-all/1">Home<span class="sr-only">(current)</span></a></li>
 
           <!-- <li><a href="#">Link</a></li> -->
 
@@ -54,7 +54,7 @@
             <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Trending
               <span class="caret"></span></a>
             <ul class="dropdown-menu">
-              <li><a class="trending-all" href="/trending-all/1">All</a></li>
+              
               <li><a class="trending-movies" href="/trending-movies/1">Movies</a></li>
               <li><a class="trending-tv-shows" href="/trending-tvshows/1">TV Shows</a></li>
               <li><a class="trending-people" href="/trending-people/1">People</a></li>
