Changed look of all pages and fixed show page cast display problem

--- a/all/public/style.css
+++ b/all/public/style.css
@@ -37,7 +37,7 @@ width:50%;
 margin:10px auto;
 
 }
-#moviebox{
+.moviebox{
 
 margin-top:40px;
 width: 100%;
@@ -109,3 +109,28 @@ hr.style-one {
     
     width:283px;
  }
+ .divtext {
+    margin-left: 550px;
+}
+.overview {
+    width: 100%
+}
+.review
+{
+    margin-left: 8%
+}
+.p{
+
+    margin-top: 20px;
+}
+.cast-name{
+
+margin-left:10%;
+color: white
+
+}
+.mt-name{
+    width: 50%;
+    color: white;
+    margin: auto;
+}
