--- a/all/views/index.ejs
+++ b/all/views/index.ejs
@@ -13,21 +13,19 @@
           
                  <% } else{ %>
                   <div class="col-sm-6 col-md-4 col-lg-4">
-                    <div class="thumbnail">
-                     
-                      <div class="caption">
                     
-      
-                  <img src="https://image.tmdb.org/t/p/w500<%= movie.poster_path %>" alt="" class="thumbnail" style="width:100%">
+                    
+                      <form action="/getmov" method="POST">
+                       
+                        <input type="image" name="movnm" value="<%= movie.id %>"  src="https://image.tmdb.org/t/p/w500<%= movie.poster_path %>" style="width: 100%">
+              
                 
-                      <h3><%= movie.title %></h3>
+                      <h3 class="mt-name"><%= movie.title %></h3>
                      
-                    <form action="/getmov" method="POST">
-                   <input type="text" name="movnm" value="<%= movie.id %>" style="display: none">
-                   <p class="infobtn"><button class="btn btn-primary">More Info!</button> </p>
+           
                     </form>
                   
-                      
+                   
                        
 
                  
@@ -35,8 +33,7 @@
 
 
             
-                </div>
-              </div>
+              
             </div>
             <% } %>
  <%  })  %>
