Removed View More buttons and made images responsive

--- a/all/views/index.ejs
+++ b/all/views/index.ejs
@@ -3,7 +3,7 @@
 <div class="a">
   <div class="container">
    
-      <h1><%= myhead %></h1>
+      <h1 class="mt-name"><%= myhead %></h1>
    
         
         <div class="p">
