Removed Errors and warnings

--- a/all/views/discussion.ejs
+++ b/all/views/discussion.ejs
@@ -16,14 +16,25 @@
 <% if(all==null){ %>
 
  <% }else{ %>
-
   <% all.forEach(function(discuss){ %>
+  <div  class="panel panel-success">
+    <div class="panel-heading">
+      <h2 class="panel-title"><%= discuss.title %> discussion started by-<%= discuss.username %></h2>
+    </div>
+    <div class="panel-body" style="background: black">
+      
+      <h3><%= discuss.description %></h3>
+    </div>
+    <button>Discuss</button>
+  </div>
 
-  <h1><%= discuss.title %></h1>
-  <h1><%= discuss.username %></h1>
-  <h1><%= discuss.description %></h1>
+  
 
-  <% }) %>
+    
+   
+  
+    <% }) %>
+  
 
 
 
